--- a/.github/workflows/deploy-model-training-pipeline-classical.yml
+++ b/.github/workflows/deploy-model-training-pipeline-classical.yml
@@ -10,7 +10,7 @@ jobs:
         
   register-environment:
       needs: get-config
-      uses: ./.github/workflows//register-environment.yml@main
+      uses: ./.github/workflows/register-environment.yml
       with:
         resource_group: ${{ needs.get-config.outputs.resource_group }}
         workspace_name: ${{ needs.get-config.outputs.aml_workspace }}     
@@ -21,7 +21,7 @@ jobs:
           
   register-dataset:
     needs: get-config
-    uses: ./.github/workflows/register-dataset.yml@main
+    uses: ./.github/workflows/register-dataset.yml
     with:
       resource_group: ${{ needs.get-config.outputs.resource_group }}
       workspace_name: ${{ needs.get-config.outputs.aml_workspace }}
@@ -32,7 +32,7 @@ jobs:
       
   create-compute:
       needs: [get-config,register-environment,register-dataset]
-      uses: ./.github/workflows/create-compute.yml@main
+      uses: ./.github/workflows/create-compute.yml
       with:
         cluster_name: cpu-cluster
         size: Standard_DS11_v2
@@ -46,7 +46,7 @@ jobs:
       
   run-pipeline:
       needs: [get-config,register-environment,create-compute,register-dataset]
-      uses: ./.github/workflows/run-pipeline.yml@main
+      uses: ./.github/workflows/run-pipeline.yml
       with:
         resource_group: ${{ needs.get-config.outputs.resource_group }}
         workspace_name: ${{ needs.get-config.outputs.aml_workspace }}     
@@ -57,7 +57,7 @@ jobs:
 
   register-environment-deploy:
     needs: get-config
-    uses: ./.github/workflows/register-environment.yml@main
+    uses: ./.github/workflows/register-environment.yml
     with:
       resource_group: ${{ needs.get-config.outputs.resource_group }}
       workspace_name: ${{ needs.get-config.outputs.aml_workspace }}     
