--- a/config-infra-prod.yml
+++ b/config-infra-prod.yml
@@ -4,7 +4,7 @@ variables:
   # Global
   ap_vm_image: ubuntu-20.04
 
-  namespace: demo_workspace # Updated namespace
+  namespace: FitwellWorkspace # Updated namespace
   postfix: 001 # Updated postfix
   location: eastus # Updated location
 
@@ -21,11 +21,11 @@ variables:
 
   # For pipeline reference
   resource_group: default_resourse_group
-  aml_workspace: demo_workspace
-  application_insights: demoworkspace1997734687
-  key_vault: demoworkspace9715646723
-  container_registry: a9c528dba4cc4042a824b912e74ef850
-  storage_account: demoworkspace0813584800
+  aml_workspace: FitwellWorkspace
+  application_insights: fitwellworkspa9912283553
+  key_vault: fitwellworkspa7534202814
+  container_registry: af5a175d168046d4bd483fe8ca126196
+  storage_account: fitwellworkspa6664757551
   
   # # For terraform reference
   # terraform_version: 0.14.7
@@ -35,3 +35,4 @@ variables:
   # terraform_st_storage_account: st$(namespace)$(postfix)$(environment)tf
   # terraform_st_container_name: default
   # terraform_st_key: mlops-tab
+
