--- a/.github/workflows/pipeline-workflow.yml
+++ b/.github/workflows/pipeline-workflow.yml
@@ -68,7 +68,7 @@ jobs:
           
   create-endpoint:
       needs: [get-config,run-pipeline]
-      uses: Azure/mlops-templates/.github/workflows/create-endpoint.yml@main
+      uses: ./.github/workflows/create-endpoint.yml
       with:
         resource_group: ${{ needs.get-config.outputs.resource_group }}
         workspace_name: ${{ needs.get-config.outputs.aml_workspace }} 
@@ -79,7 +79,7 @@ jobs:
         creds: ${{secrets.AZURE_CREDENTIALS}}
 
   create-deployment:
-      uses: Azure/mlops-templates/.github/workflows/create-deployment.yml@main
+      uses:  ./.github/workflows/create-deployment.yml
       needs: [get-config,register-environment-deploy,create-endpoint]
       with:
         resource_group: ${{ needs.get-config.outputs.resource_group }}
@@ -92,7 +92,7 @@ jobs:
         creds: ${{secrets.AZURE_CREDENTIALS}}
 
   allocate-traffic:
-      uses: Azure/mlops-templates/.github/workflows/allocate-traffic.yml@main
+      uses: ./.github/workflows/allocate-traffic.yml
       needs: [get-config,create-deployment]
       with:
         resource_group: ${{ needs.get-config.outputs.resource_group }}
