--- a/.github/workflows/create-endpoint.yml
+++ b/.github/workflows/create-endpoint.yml
@@ -33,7 +33,7 @@ jobs:
           # Azure login can use either Service Principal or OIDC authentication:
           # 1. Service Principal: Uses client ID, tenant ID, client secret/certificate
           #    Example: creds: ${{secrets.creds}}
-           creds: ${{secrets.creds}}
+          # creds: ${{secrets.creds}}
           # 2. OIDC (OpenID Connect): More secure, uses federated identity credentials
           #    Example:
           #    client-id: ${{ secrets.AZURE_CLIENT_ID }}
@@ -42,11 +42,11 @@ jobs:
           #    enable-oidc: true
           #
           # Choose the appropriate method based on your security requirements
-          # client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          # tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          # subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
          # Uncomment next line to use OIDC
-          # enable-oidc: true
+          enable-oidc: true
       - name: install-extension
         run: az extension add -n ml -y
       - name: update-extension
