--- a/.github/workflows/pipeline-workflow.yml
+++ b/.github/workflows/pipeline-workflow.yml
@@ -17,7 +17,7 @@ jobs:
         environment_file:  mlops/azureml/train/train-env.yml
         conda_file: data-science/environment/train-conda.yml
       secrets:
-          creds: ${{secrets.AZURE_CREDENTIALS}}
+           AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }} 
           
   register-dataset:
     needs: get-config
