--- a/.github/workflows/create-deployment.yml
+++ b/.github/workflows/create-deployment.yml
@@ -22,7 +22,7 @@ on:
         required: true
         type: string
     secrets:
-      creds:
+      AZURE_CREDENTIALS:
         required: true
 jobs:
   create-deployment:
@@ -33,7 +33,7 @@ jobs:
       - name: "Az CLI login"
         uses: azure/login@v1
         with:
-          creds: ${{secrets.creds}}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
           
       - name: install-extension
         run: az extension add -n ml -y
