--- a/.github/workflows/register-environment.yml
+++ b/.github/workflows/register-environment.yml
@@ -22,7 +22,7 @@ on:
         default: ""
         type: string
     secrets:
-      creds:
+      AZURE_CREDENTIALS:
         required: true
 jobs:
   register-environment:
@@ -33,23 +33,9 @@ jobs:
       - name: "Az CLI login"
         uses: azure/login@v1
         with:
-          # Azure login can use either Service Principal or OIDC authentication:
-          # 1. Service Principal: Uses client ID, tenant ID, client secret/certificate
-          creds: ${{secrets.creds}}
-          #
-          # 2. OIDC (OpenID Connect): More secure, uses federated identity credentials
-          #    Example:
-          #    client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          #    tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          #    subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          #    enable-oidc: true
-          #
-          # Choose the appropriate method based on your security requirements
-          # client-id: ${{ secrets.AZURE_CLIENT_ID }}
-          # tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-          # subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
-          # Uncomment next line to use OIDC
-          # enable-oidc: true
+          
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
+          
       - name: install-extension
         run: az extension add -n ml -y
       - name: update-extension
@@ -71,3 +57,4 @@ jobs:
         run: |
           az ml environment create --file ${{ github.workspace }}/${{ inputs.environment_file }} --resource-group ${{ inputs.resource_group }} \
                                   --workspace-name ${{ inputs.workspace_name }} --build-context ${{ github.workspace }}/${{ inputs.dockerfile-location }}
+
