--- a/.github/workflows/run-pipeline.yml
+++ b/.github/workflows/run-pipeline.yml
@@ -16,7 +16,7 @@ on:
         required: true
         type: string
     secrets:
-      creds:
+      AZURE_CREDENTIALS:
         required: true
 jobs:
   run-pipeline:
@@ -28,7 +28,7 @@ jobs:
         uses: azure/login@v1
         with:
          
-          creds: ${{secrets.creds}}
+          creds: ${{ secrets.AZURE_CREDENTIALS }}
          
       - name: install-extension
         run: az extension add -n ml -y
@@ -61,4 +61,5 @@ jobs:
             echo "Training Job failed or canceled"
             exit 3
           fi
+
 
