--- a/.github/workflows/create-endpoint.yml
+++ b/.github/workflows/create-endpoint.yml
@@ -27,6 +27,13 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
+
+      - name: Debug Secret Length
+        run: |
+          echo "Secret length: ${#AZURE_CREDENTIALS}"
+        env:
+          AZURE_CREDENTIALS: ${{ secrets.AZURE_CREDENTIALS }}
+          
       - name: "Az CLI login"
         uses: azure/login@v1
         with:
